--- a/helpers/for-testing.html
+++ b/helpers/for-testing.html
@@ -26,52 +26,16 @@
   <link rel="stylesheet" href="../assets/style.css">
 
 </head>
-<footer class="footer">
-  <div class="row text">
-    <div class="col">
-      <div>
-        <img src="../assets/images/logo.png" alt="Logo" />
-      </div>
-      <div class="description">Plan and book your perfect trip with expert advice, travel tips for vehicle information
-        from us</div>
-      <div>©2020 Vehicle Rental Center. All rights reserved</div>
-    </div>
-    <div class="col-md-2 footer-list">
-      <h5>Destination</h5>
-      <ul>
-        <li>Bali</li>
-        <li>Yogyakarta</li>
-        <li>Jakarta</li>
-        <li>Kalimantan</li>
-        <li>Malang</li>
-      </ul>
-    </div>
-    <div class="col-md-2 footer-list">
-      <h5>Destination</h5>
-      <ul>
-        <li>Bali</li>
-        <li>Yogyakarta</li>
-        <li>Jakarta</li>
-        <li>Kalimantan</li>
-        <li>Malang</li>
-      </ul>
-    </div>
-    <div class="col-md-2 footer-list">
-      <h5>Destination</h5>
-      <ul>
-        <li>Bali</li>
-        <li>Yogyakarta</li>
-        <li>Jakarta</li>
-        <li>Kalimantan</li>
-        <li>Malang</li>
-      </ul>
-    </div>
+<div class="col-12">
+  <div class="row">
+    <form class="d-flex justify-content-between form-button-profile">
+      <a href="#"><button type="button" class="btn btn-info btn-xl btn-xxl btn-sm btn-lg btn-md "> Save Change
+        </button></a>
+      <a href="#">
+        <button type="button" class="btn btn-primary btn-lg btn-sm btn-xl">Large button</button>
+        <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+      </a>
+      <a href="#"><button type="button" class="btn "> Cancel </button></a>
+    </form>
   </div>
-  <div class="link-social">
-    <i class="fa-brands fa-twitter"></i>
-    <i class="fa-brands fa-facebook-f"></i>
-    <i class="fa-brands fa-instagram"></i>
-    <i class="fa-brands fa-linkedin-in"></i>
-    <i class="fa-brands fa-youtube"></i>
-  </div>
-</footer>
+</div>
