--- a/helpers/navbar-after-login.html
+++ b/helpers/navbar-after-login.html
@@ -1,6 +1,6 @@
 <nav class="navbar ms-auto navbar-expand-lg navbar-light bg-transparent">
   <div class="container ">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="">
       <img src="../assets/images/logo.png" alt="Avatar Logo" class="rounded-pill">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class=" navbar-nav ms-auto mb-lg-0">
         <li class="nav-item nav-menu-before">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="../views/index-after-login.html">Home</a>
         </li>
         <li class="nav-item nav-menu-before">
           <a class="nav-link" href="#">History</a>
@@ -40,7 +40,7 @@
           </a>
         </div>
         <div class="img-profile-login">
-          <a class="" href="#">
+          <a class="" href="../views/profil.html">
             <img src="../assets/images/profile.png" alt="Avatar Logo" class=" rounded-pill">
           </a>
         </div>
