--- a/helpers/for-testing.html
+++ b/helpers/for-testing.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile</title>
+  <title>Vehicle Rent</title>
   <!--Bootstrap CDN-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css"
     integrity="sha512-Ez0cGzNzHR1tYAv56860NLspgUGuQw16GiOOp/I2LuTmpSK9xDXlgJz3XN4cnpXWDmkNBKXR/VDMTCnAaEooxA=="
@@ -24,18 +24,169 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
   <!--Custom CSS-->
   <link rel="stylesheet" href="../assets/style.css">
-
 </head>
-<div class="col-12">
-  <div class="row">
-    <form class="d-flex justify-content-between form-button-profile">
-      <a href="#"><button type="button" class="btn btn-info btn-xl btn-xxl btn-sm btn-lg btn-md "> Save Change
-        </button></a>
-      <a href="#">
-        <button type="button" class="btn btn-primary btn-lg btn-sm btn-xl">Large button</button>
-        <button type="button" class="btn btn-secondary btn-lg">Large button</button>
-      </a>
-      <a href="#"><button type="button" class="btn "> Cancel </button></a>
-    </form>
+
+<body>
+  <!--NAVBAR-->
+  <div id="navbar"></div>
+  <!--END NAVBAR-->
+
+  <!--START  HEADER-->
+  <header class="header-home">
+    <div class="header-content">
+      <div class="row container">
+        <div class="col-12">
+          <h1>Explore and Travel</h1>
+        </div>
+        <div class="col-12">
+          <p>Vehicle Finder</p>
+        </div>
+        <div class="col-12">
+          <span class="border-top border-2"></span>
+        </div>
+        <div class="col-12">
+          <div class="m-4">
+            <form action="/examples/actions/confirmation.php" method="post">
+              <div class="col-12">
+                <div class="mb-3">
+                  <input type="email" class="form-type-vehicle form-control"
+                    placeholder="Type the vehicle (ex. motorbike">
+                </div>
+              </div>
+              <div class="col-12 d-flex">
+                <div class="col-3">
+                  <div class="mb-3">
+                    <select class="form-select form-location-home mx-9" aria-label="Default select example">
+                      <option selected>Location</option>
+                      <option value="Bekasi">Bekasi</option>
+                      <option value="Bandung">Bandung</option>
+                      <option value="Bogor">Bogor</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-3">
+                  <div class="mb-3 ">
+                    <input id="datepicker" type="text" placeholder="Date"
+                      class="form-control form-select form-date-home me-auto">
+                  </div>
+                </div>
+              </div>
+              <div class="">
+                <button type="button" class=" search-vehicles btn  " aria-expanded="false">
+                  Search
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!--END HEADER-->
+
+  <!--START BODY-->
+
+  <div class="main">
+    <div class="popular">
+      <h2><b> Popular in town</b></h2>
+      <div class="row">
+        <div class="col">
+          <div class="img1">
+            <img src="../assets/images/img3-home.png" class="float-start rounded">
+            <form class="text-img1">
+              <button type="submit" class="btn head">Merapi</button>
+              <button type="submit" class="btn">Yogyakarta</button>
+            </form>
+          </div>
+        </div>
+        <div class="col">
+          <div class="img1">
+            <img src="../assets/images/img2-home.png" class="float-start rounded">
+            <form class="text-img1">
+              <button type="submit" class="btn head">Teluk Bogam</button>
+              <button type="submit" class="btn">Kalimantan</button>
+            </form>
+          </div>
+        </div>
+        <div class="col">
+          <div class="img1 ">
+            <img src="../assets/images/img1-home.png" class="float-start rounded">
+            <form class="text-img1">
+              <button type="submit" class="btn head">Bromo</button>
+              <button type="submit" class="btn">Malang</button>
+            </form>
+          </div>
+        </div>
+        <div class="col">
+          <div class="img1">
+            <img src="../assets/images/img4-home.png" class="float-start rounded">
+            <form class="text-img1">
+              <button type="submit" class="btn head">Malioboro</button>
+              <button type="submit" class="btn">Yogyakarta</button>
+            </form>
+            <div class="next">
+              <i class="fa-solid fa-circle-chevron-right"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="popular">
+      <h2><b> Testimonials </b></h2>
+      <div class="row">
+        <div class="col">
+          <div class="testi-text-star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <div class="testi-text">
+            ”It was the right decision to rent vehicle here, I spent less money and enjoy the trip. It was an amazing
+            experience to have a ride for wildlife trip!”
+          </div>
+          <h4>Edward Newgate</h4>
+          <h5>Founder Circle</h5>
+        </div>
+        <div class="col">
+          <div class="img1">
+            <img src="../assets/images/profil-edward.png" class="float-start rounded">
+            <form class="text-next">
+              <i class="fa-solid fa-circle-chevron-left"></i>
+              <i class="fa-solid fa-circle-chevron-right"></i>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+
+  <!--END BODY-->
+
+  <!--START FOOTER-->
+  <div id="footer"></div>
+  <!--END FOOTER-->
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+<script>
+  $(document).ready(function () {
+    $.get('../helpers/navbar.html', (res) => {
+      $('#navbar').html(res)
+    })
+  });
+
+  $(document).ready(function () {
+    $.get('../helpers/footer.html', (res) => {
+      $('#footer').html(res)
+    })
+  });
+  $(document).ready(function () {
+    $('#datepicker').datepicker();
+
+  });
+</script>
+
+</html>
