--- a/helpers/for-testing.html
+++ b/helpers/for-testing.html
@@ -7,9 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vehicle Rent</title>
   <!--Bootstrap CDN-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css"
-    integrity="sha512-Ez0cGzNzHR1tYAv56860NLspgUGuQw16GiOOp/I2LuTmpSK9xDXlgJz3XN4cnpXWDmkNBKXR/VDMTCnAaEooxA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/js/bootstrap.bundle.min.js"
     integrity="sha512-sH8JPhKJUeA9PWk3eOcOl8U+lfZTgtBXD41q6cO/slwxGHCxKcW45K4oPCUhHG7NMB4mbKEddVmPuTXtpbCbFA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -30,139 +28,27 @@
   <!--NAVBAR-->
   <div id="navbar"></div>
   <!--END NAVBAR-->
-
-  <!--START  HEADER-->
-  <header class="header-home">
-    <div class="header-content">
-      <div class="row container">
-        <div class="col-12">
-          <h1>Explore and Travel</h1>
-        </div>
-        <div class="col-12">
-          <p>Vehicle Finder</p>
-        </div>
-        <div class="col-12">
-          <span class="border-top border-2"></span>
-        </div>
-        <div class="col-12">
-          <div class="m-4">
-            <form action="/examples/actions/confirmation.php" method="post">
-              <div class="col-12">
-                <div class="mb-3">
-                  <input type="email" class="form-type-vehicle form-control"
-                    placeholder="Type the vehicle (ex. motorbike">
-                </div>
-              </div>
-              <div class="col-12 d-flex">
-                <div class="col-3">
-                  <div class="mb-3">
-                    <select class="form-select form-location-home mx-9" aria-label="Default select example">
-                      <option selected>Location</option>
-                      <option value="Bekasi">Bekasi</option>
-                      <option value="Bandung">Bandung</option>
-                      <option value="Bogor">Bogor</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="col-3">
-                  <div class="mb-3 ">
-                    <input id="datepicker" type="text" placeholder="Date"
-                      class="form-control form-select form-date-home me-auto">
-                  </div>
-                </div>
-              </div>
-              <div class="">
-                <button type="button" class=" search-vehicles btn  " aria-expanded="false">
-                  Search
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-  <!--END HEADER-->
-
-  <!--START BODY-->
-
-  <div class="main">
-    <div class="popular">
-      <h2><b> Popular in town</b></h2>
-      <div class="row">
-        <div class="col">
-          <div class="img1">
-            <img src="../assets/images/img3-home.png" class="float-start rounded">
-            <form class="text-img1">
-              <button type="submit" class="btn head">Merapi</button>
-              <button type="submit" class="btn">Yogyakarta</button>
-            </form>
-          </div>
-        </div>
-        <div class="col">
-          <div class="img1">
-            <img src="../assets/images/img2-home.png" class="float-start rounded">
-            <form class="text-img1">
-              <button type="submit" class="btn head">Teluk Bogam</button>
-              <button type="submit" class="btn">Kalimantan</button>
-            </form>
-          </div>
-        </div>
-        <div class="col">
-          <div class="img1 ">
-            <img src="../assets/images/img1-home.png" class="float-start rounded">
-            <form class="text-img1">
-              <button type="submit" class="btn head">Bromo</button>
-              <button type="submit" class="btn">Malang</button>
-            </form>
-          </div>
-        </div>
-        <div class="col">
-          <div class="img1">
-            <img src="../assets/images/img4-home.png" class="float-start rounded">
-            <form class="text-img1">
-              <button type="submit" class="btn head">Malioboro</button>
-              <button type="submit" class="btn">Yogyakarta</button>
-            </form>
-            <div class="next">
-              <i class="fa-solid fa-circle-chevron-right"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="popular">
-      <h2><b> Testimonials </b></h2>
-      <div class="row">
-        <div class="col">
-          <div class="testi-text-star">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-          </div>
-          <div class="testi-text">
-            ”It was the right decision to rent vehicle here, I spent less money and enjoy the trip. It was an amazing
-            experience to have a ride for wildlife trip!”
-          </div>
-          <h4>Edward Newgate</h4>
-          <h5>Founder Circle</h5>
-        </div>
-        <div class="col">
-          <div class="img1">
-            <img src="../assets/images/profil-edward.png" class="float-start rounded">
-            <form class="text-next">
-              <i class="fa-solid fa-circle-chevron-left"></i>
-              <i class="fa-solid fa-circle-chevron-right"></i>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="custom-control custom-radio custom-control-inline">
+    <input type="radio" id="rd_1" name="rd" class="custom-control-input" value="Yes">
+    <label class="custom-control-label green" for="rd_1">Yes</label>
+  </div>
+  <div class="custom-control custom-radio custom-control-inline">
+    <input type="radio" id="rd_2" name="rd" class="custom-control-input" value="No">
+    <label class="custom-control-label red" for="rd_2">No</label>
   </div>
 
+  <div class="custom-control custom-radio custom-control-inline ">
+    <input class="custom-control-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+    <label class="custom-control-label red" for="exampleRadios1">
+      Male
+    </label>
+  </div>
+  <div class="custom-control custom-radio custom-control-inline ">
+    <input class="custom-control-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option2" checked>
+    <label class="custom-control-label green" for="exampleRadios2">
+      Female
+    </label>
+  </div>
   <!--END BODY-->
 
   <!--START FOOTER-->
