--- a/helpers/navbar-after-login.html
+++ b/helpers/navbar-after-login.html
@@ -1,7 +1,8 @@
 <nav class="navbar ms-auto navbar-expand-lg navbar-light bg-transparent">
   <div class="container ">
     <a class="navbar-brand" href="">
-      <img src="../assets/images/logo.png" alt="Avatar Logo" class="rounded-pill">
+      <img style="width: 100px; height: 100px;" src="../assets/images/logo-bkz.png" alt="Avatar Logo"
+        class="logo-bkz rounded-pill">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
