--- a/helpers/footer.html
+++ b/helpers/footer.html
@@ -2,7 +2,7 @@
   <div class="row text">
     <div class="col">
       <div>
-        <img src="../assets/images/logo.png" alt="Logo" />
+        <img style="width: 100px; height: 100px;" class="logo-bkz" src="../assets/images/logo-bkz.png" alt="Logo" />
       </div>
       <div class="description">Plan and book your perfect trip with expert advice, travel tips for vehicle information
         from us</div>
