--- a/helpers/footer.html
+++ b/helpers/footer.html
@@ -6,7 +6,7 @@
       </div>
       <div class="description">Plan and book your perfect trip with expert advice, travel tips for vehicle information
         from us</div>
-      <div>©2020 Vehicle Rental Center. All rights reserved</div>
+      <div>©2022 Planet BKZ Rental. All rights reserved</div>
     </div>
     <div class="col-md-2 footer-list">
       <h5>Destination</h5>
