--- a/helpers/for-testing.html
+++ b/helpers/for-testing.html
@@ -1,78 +1,141 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vehicle Rent</title>
-  <!--Bootstrap CDN-->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/js/bootstrap.bundle.min.js"
-    integrity="sha512-sH8JPhKJUeA9PWk3eOcOl8U+lfZTgtBXD41q6cO/slwxGHCxKcW45K4oPCUhHG7NMB4mbKEddVmPuTXtpbCbFA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <!--Font Awesome-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!--Google Font-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
-  <!--Custom CSS-->
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+    crossorigin="anonymous" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+    crossorigin="anonymous" />
   <link rel="stylesheet" href="../assets/style.css">
+  <title>Owl Carousel</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+    * {
+      font-family: 'Poppins', sans-serif;
+    }
+
+    img {
+      height: 280px;
+    }
+
+    body {
+      background: hsl(0, 0, 94%);
+    }
+  </style>
 </head>
 
 <body>
-  <!--NAVBAR-->
-  <div id="navbar"></div>
-  <!--END NAVBAR-->
-  <div class="custom-control custom-radio custom-control-inline">
-    <input type="radio" id="rd_1" name="rd" class="custom-control-input" value="Yes">
-    <label class="custom-control-label green" for="rd_1">Yes</label>
-  </div>
-  <div class="custom-control custom-radio custom-control-inline">
-    <input type="radio" id="rd_2" name="rd" class="custom-control-input" value="No">
-    <label class="custom-control-label red" for="rd_2">No</label>
+
+  <div class="container-fluid my-5">
+    <div class="row">
+      <div class="col-12 m-auto">
+        <div class="owl-carousel owl-theme">
+          <div class="item mb-4">
+            <div class="img1">
+              <img src="../assets/images/img3-home.png" class="float-start rounded">
+              <form class="text-img1">
+                <button type="submit" class="btn head">Merapi</button>
+                <button type="submit" class="btn">Yogyakarta</button>
+              </form>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class=" border-0 shadow">
+              <img src="3.jpg" alt="" class="card-img-top">
+              <div class="card-body">
+                <div class="card-title text-center">
+                  <h4>Owl Carousel</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card border-0 shadow">
+              <img src="4.jpg" alt="" class="card-img-top">
+              <div class="card-body">
+                <div class="card-title text-center">
+                  <h4>Owl Carousel</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card border-0 shadow">
+              <img src="5.jpg" alt="" class="card-img-top">
+              <div class="card-body">
+                <div class="card-title text-center">
+                  <h4>Owl Carousel</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card border-0 shadow">
+              <img src="6.jpg" alt="" class="card-img-top">
+              <div class="card-body">
+                <div class="card-title text-center">
+                  <h4>Owl Carousel</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="card border-0 shadow">
+              <img src="7.jpg" alt="" class="card-img-top">
+              <div class="card-body">
+                <div class="card-title text-center">
+                  <h4>Owl Carousel</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="custom-control custom-radio custom-control-inline ">
-    <input class="custom-control-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
-    <label class="custom-control-label red" for="exampleRadios1">
-      Male
-    </label>
-  </div>
-  <div class="custom-control custom-radio custom-control-inline ">
-    <input class="custom-control-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option2" checked>
-    <label class="custom-control-label green" for="exampleRadios2">
-      Female
-    </label>
-  </div>
-  <!--END BODY-->
 
-  <!--START FOOTER-->
-  <div id="footer"></div>
-  <!--END FOOTER-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+    crossorigin="anonymous"></script>
+  <script>
+    $('.owl-carousel').owlCarousel({
+      loop: true,
+      margin: 15,
+      nav: true,
+      responsive: {
+        0: {
+          items: 1
+        },
+        600: {
+          items: 2
+        },
+        1000: {
+          items: 3
+        }
+      }
+    })
+  </script>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-<script>
-  $(document).ready(function () {
-    $.get('../helpers/navbar.html', (res) => {
-      $('#navbar').html(res)
-    })
-  });
-
-  $(document).ready(function () {
-    $.get('../helpers/footer.html', (res) => {
-      $('#footer').html(res)
-    })
-  });
-  $(document).ready(function () {
-    $('#datepicker').datepicker();
-
-  });
-</script>
 
 </html>
