--- a/helpers/navbar-after-login.html
+++ b/helpers/navbar-after-login.html
@@ -37,7 +37,7 @@
       <form class="d-flex">
         <div class="mail">
           <a class="" href="#">
-            <i class="fa-solid fa-envelope"></i>
+            <i class="text-warning  fa-solid fa-envelope"></i>
           </a>
         </div>
         <div class="img-profile-login">
