--- a/helpers/navbar-after-login.html
+++ b/helpers/navbar-after-login.html
@@ -1,6 +1,6 @@
 <nav class="navbar ms-auto navbar-expand-lg navbar-light bg-transparent">
   <div class="container ">
-    <a class="navbar-brand" href="">
+    <a class="navbar-brand" href="../views/index-after-login.html">
       <img style="width: 100px; height: 100px;" src="../assets/images/logo-bkz.png" alt="Avatar Logo"
         class="logo-bkz rounded-pill">
     </a>
@@ -14,11 +14,11 @@
           <a class="nav-link active" aria-current="page" href="../views/index-after-login.html">Home</a>
         </li>
         <li class="nav-item nav-menu-before">
-          <a class="nav-link" href="#">History</a>
+          <a class="nav-link" href="../views/history.html">History</a>
         </li>
         <li class="nav-item dropdown nav-menu-before">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="../views/vehicles-type.html" id="navbarDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Vehicle Type
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
