--- a/helpers/navbar.html
+++ b/helpers/navbar.html
@@ -11,14 +11,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class=" navbar-nav ms-auto mb-lg-0">
         <li class="nav-item nav-menu-before">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="../views/index.html">Home</a>
         </li>
         <li class="nav-item nav-menu-before">
-          <a class="nav-link" href="#">History</a>
+          <a class="nav-link" href="../views/history.html">History</a>
         </li>
         <li class="nav-item dropdown nav-menu-before">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="../views/vehicles-type.html" id="navbarDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
             Vehicle Type
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
