--- a/helpers/navbar.html
+++ b/helpers/navbar.html
@@ -17,12 +17,12 @@
           <a class="nav-link" href="../views/history.html">History</a>
         </li>
         <li class="nav-item dropdown nav-menu-before">
-          <a class="nav-link dropdown-toggle" href="../views/vehicles-type.html" id="navbarDropdown" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Vehicle Type
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Bike</a></li>
+            <li><a class="dropdown-item" href="../views/vehicles-type.html">Bike</a></li>
             <li><a class="dropdown-item" href="#">Motorbike</a></li>
             <li>
               <hr class="dropdown-divider">
