--- a/helpers/navbar-after-login.html
+++ b/helpers/navbar-after-login.html
@@ -8,7 +8,7 @@
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="center-navbar collapse navbar-collapse" id="navbarSupportedContent">
       <ul class=" navbar-nav ms-auto mb-lg-0">
         <li class="nav-item nav-menu-before">
           <a class="nav-link active" aria-current="page" href="../views/index-after-login.html">Home</a>
@@ -17,24 +17,25 @@
           <a class="nav-link" href="../views/history.html">History</a>
         </li>
         <li class="nav-item dropdown nav-menu-before">
-          <a class="nav-link dropdown-toggle" href="../views/vehicles-type.html" id="navbarDropdown" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Vehicle Type
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Bike</a></li>
-            <li><a class="dropdown-item" href="#">Motorbike</a></li>
+            <li><a class="dropdown-item" href="../views/vehicles-type.html">Vehicle Type</a></li>
+            <li><a class="dropdown-item" href="../views/view-more-detail.html">View More Detail</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Car</a></li>
+            <li><a class="dropdown-item" href="../views/reservation.html">Reservation</a></li>
+            <li><a class="dropdown-item" href="../views/payment.html">Payment</a></li>
           </ul>
         </li>
         <li class="nav-item nav-menu-before">
           <a class="nav-link" href="#" tabindex="-1">About</a>
         </li>
       </ul>
-      <form class="d-flex">
+      <form class="d-flex justify-content-center">
         <div class="mail">
           <a class="" href="#">
             <i class="text-warning  fa-solid fa-envelope"></i>
