--- a/helpers/navbar.html
+++ b/helpers/navbar.html
@@ -8,7 +8,7 @@
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse center-navbar navbar-collapse" id="navbarSupportedContent">
       <ul class=" navbar-nav ms-auto mb-lg-0">
         <li class="nav-item nav-menu-before">
           <a class="nav-link active" aria-current="page" href="../views/index.html">Home</a>
@@ -34,7 +34,7 @@
           <a class="nav-link" href="#" tabindex="-1">About</a>
         </li>
       </ul>
-      <form class="d-flex">
+      <form class="d-flex justify-content-center">
         <a href="../views/login.html"><button type="button" class="btn-login btn btn-info"> Login</button></a>
         <a href="../views/signup.html"><button type="button" class="btn-register btn btn-info">Register</button></a>
       </form>
